ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-wordpress
            port:
              number: 80
      - path: /wp-admin
        pathType: Exact
        backend:
          service:
            name: wp-wordpress
            port:
              number: 80
